welcome.lessons.welcome.methods.basics.Methods.scala.error
Methods:20: error: not found: value cp
		cp=cp-1
                ^