welcome.lessons.welcome.methods.basics.Methods.scala.code
for (i<-0 to 6)
{
	var nbPas:Int =0
	while (!estSurBiscuit)
	{
		avance();
		nbPas=nbPas+1
		
	}
	if (estSurBiscuit)
	{
		prendBiscuit();
	}

	var dejafait:Int=0;
	while (dejafait!=nbPas)
	{
		recule();
		cp=cp-1
	}
	poseBiscuit();
	droite();
	avance();
	gauche();
}
